修正footer版權區塊 增加下拉選單共用樣式(form-select) 3-1幸福職涯共兩頁 含RWD完

--- a/pro/archive-coverage.html
+++ b/pro/archive-coverage.html
@@ -614,7 +614,7 @@
         <input type="email" placeholder="E-mail">
         <button class="search-submit-btn btn">訂閱電子報</button>
     </div>
-
+</div>
 <div class="footer-copy">
     <p>© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
     <a href="" class="tag">隱私權宣告</a>
