--- a/pro/happiness-job.html
+++ b/pro/happiness-job.html
@@ -114,7 +114,7 @@
         </ul>
     </div>
 </div></header>
-    <div class="index-wrapper">
+    <div class="happiness-wrapper">
         <section class="swiper">
             <swiper><!-- 10 Banner -->
 
@@ -154,15 +154,305 @@
     <div class="swiper-pagination"></div> -->
 </div></swiper>
         </section>
-        <section class="cardJob">
+        <section class="happinessJob">
             <div class="title">
                 <h2>幸福職涯</h2>
+                <div class="search classBtn">
+                    <input type="text" placeholder="輸入公司/品牌或職務關鍵字">
+                    <button class="search-submit-btn btn">搜尋</button>
+                </div>
             </div>
-            <card-job></card-job>
-            <!-- <button class="btn">
-                閱讀更多
-            </button> -->
+            <div class="linkTab">
+                <a href="happiness-company.html">嚴選企業</a>
+                <a href="happiness-job.html" class="tabFocus">推薦職缺</a>
+            </div>
+            <div class="company-select">
+                <button class="advanced">進階搜尋</button>
+                <div class="select-flex form-select">
+                    <select name="area">
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                    </select>
+                    <select name="industry">
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                    </select>
+                    <select name="welfare">
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                    </select>
+                </div>
+            </div>
+            <card-job-tag><!-- 07 職涯無照片tag區塊 -->
+
+<div class="jobTag-section">
+    <div class="card-jobTag">
+        <h4>水電工程師(台北市、新北市)</h4>
+        <div class="content-section">
+            <div class="card-content">
+                <div class="job-title">
+                    <img src="assets/img/job-card-cover.png" alt="">
+                    <p>隆通工程有限公司</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p>月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">勞保</p>
+                    <p class="tag">健保</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">員工生日禮金</p>
+                    <p class="tag">年終獎金</p>
+                    <p class="tag">員工在職教育訓練</p>
+                </div>
+            </div>
+            <div class="card-btn">
+                <button class="btn">
+                    我要應徵
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="card-jobTag">
+        <h4>水電工程師(台北市、新北市)</h4>
+        <div class="content-section">
+            <div class="card-content">
+                <div class="job-title">
+                    <img src="assets/img/job-card-cover.png" alt="">
+                    <p>隆通工程有限公司</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p>月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">勞保</p>
+                    <p class="tag">健保</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">員工生日禮金</p>
+                    <p class="tag">年終獎金</p>
+                    <p class="tag">員工在職教育訓練</p>
+                </div>
+            </div>
+            <div class="card-btn">
+                <button class="btn">
+                    我要應徵
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="card-jobTag">
+        <h4>水電工程師(台北市、新北市)</h4>
+        <div class="content-section">
+            <div class="card-content">
+                <div class="job-title">
+                    <img src="assets/img/job-card-cover.png" alt="">
+                    <p>隆通工程有限公司</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p>月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">勞保</p>
+                    <p class="tag">健保</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">員工生日禮金</p>
+                    <p class="tag">年終獎金</p>
+                    <p class="tag">員工在職教育訓練</p>
+                </div>
+            </div>
+            <div class="card-btn">
+                <button class="btn">
+                    我要應徵
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="card-jobTag">
+        <h4>水電工程師(台北市、新北市)</h4>
+        <div class="content-section">
+            <div class="card-content">
+                <div class="job-title">
+                    <img src="assets/img/job-card-cover.png" alt="">
+                    <p>隆通工程有限公司</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p>月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">勞保</p>
+                    <p class="tag">健保</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">員工生日禮金</p>
+                    <p class="tag">年終獎金</p>
+                    <p class="tag">員工在職教育訓練</p>
+                </div>
+            </div>
+            <div class="card-btn">
+                <button class="btn">
+                    我要應徵
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="card-jobTag">
+        <h4>水電工程師(台北市、新北市)</h4>
+        <div class="content-section">
+            <div class="card-content">
+                <div class="job-title">
+                    <img src="assets/img/job-card-cover.png" alt="">
+                    <p>隆通工程有限公司</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p>月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">勞保</p>
+                    <p class="tag">健保</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">員工生日禮金</p>
+                    <p class="tag">年終獎金</p>
+                    <p class="tag">員工在職教育訓練</p>
+                </div>
+            </div>
+            <div class="card-btn">
+                <button class="btn">
+                    我要應徵
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="card-jobTag">
+        <h4>水電工程師(台北市、新北市)</h4>
+        <div class="content-section">
+            <div class="card-content">
+                <div class="job-title">
+                    <img src="assets/img/job-card-cover.png" alt="">
+                    <p>隆通工程有限公司</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p>月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">勞保</p>
+                    <p class="tag">健保</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">需穿著員工制服</p>
+                    <p class="tag">員工生日禮金</p>
+                    <p class="tag">年終獎金</p>
+                    <p class="tag">員工在職教育訓練</p>
+                </div>
+            </div>
+            <div class="card-btn">
+                <button class="btn">
+                    我要應徵
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+</card-job-tag>
+            <pgnb-second class="pagination pgnb-style2"><div class="g-pagination">
+    <!-- 上一頁在有前一頁時才會顯現 -->
+    <a href="" class="previous tag">上一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+    <select name="page">
+        <option value="第一頁">第一頁</option>
+        <option value="第二頁">第二頁</option>
+        <option value="第三頁">第三頁</option>
+    </select>
+    <!-- 若沒有下一頁內容則隱藏 -->
+    <a href="" class="next tag">下一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+</div></pgnb-second>
         </section>
+        <div class="ad-area-wrapper">
+            <div class="ad-area-container">
+                <img src="assets/img/ad-ex.png" alt="">
+                <img src="assets/img/ad-ex.png" alt="">
+            </div>
+        </div>
     </div>
     <footer><div class="container-footer">
     <p class="gotop">
@@ -223,7 +513,7 @@
         <input type="email" placeholder="E-mail">
         <button class="search-submit-btn btn">訂閱電子報</button>
     </div>
-
+</div>
 <div class="footer-copy">
     <p>© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
     <a href="" class="tag">隱私權宣告</a>
