--- a/src/happiness-company.html
+++ b/src/happiness-company.html
@@ -22,14 +22,31 @@
                 </div>
             </div>
             <div class="linkTab">
-                <a href="" class="tabFocus">嚴選企業</a>
-                <a href="">推薦職缺</a>
+                <a href="happiness-company.html" class="tabFocus">嚴選企業</a>
+                <a href="happiness-job.html">推薦職缺</a>
+            </div>
+            <div class="company-select">
+                <button class="advanced">進階搜尋</button>
+                <div class="select-flex form-select">
+                    <select name="area">
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                    </select>
+                    <select name="industry">
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                    </select>
+                    <select name="welfare">
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                    </select>
+                </div>
             </div>
             <card-company-tag></card-company-tag>
             <pgnb-second class="pagination pgnb-style2"></pgnb-second>
-            <button class="btn">
-                閱讀更多
-            </button>
         </section>
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
