--- a/pro/happiness-company.html
+++ b/pro/happiness-company.html
@@ -163,8 +163,28 @@
                 </div>
             </div>
             <div class="linkTab">
-                <a href="" class="tabFocus">嚴選企業</a>
-                <a href="">推薦職缺</a>
+                <a href="happiness-company.html" class="tabFocus">嚴選企業</a>
+                <a href="happiness-job.html">推薦職缺</a>
+            </div>
+            <div class="company-select">
+                <button class="advanced">進階搜尋</button>
+                <div class="select-flex form-select">
+                    <select name="area">
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                    </select>
+                    <select name="industry">
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                    </select>
+                    <select name="welfare">
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                    </select>
+                </div>
             </div>
             <card-company-tag><!-- 08 公司tag區塊 -->
 
@@ -397,9 +417,6 @@
         </span>
     </a>
 </div></pgnb-second>
-            <button class="btn">
-                閱讀更多
-            </button>
         </section>
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
@@ -467,7 +484,7 @@
         <input type="email" placeholder="E-mail">
         <button class="search-submit-btn btn">訂閱電子報</button>
     </div>
-
+</div>
 <div class="footer-copy">
     <p>© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
     <a href="" class="tag">隱私權宣告</a>
