新增公司頁面共用slider的頭

--- a/src/company-story.html
+++ b/src/company-story.html
@@ -33,7 +33,27 @@
                     </div>
                 </div>
             </div>
-            <swiper></swiper>
+            <div class="company-swiper">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                    </div>
+                    <!-- <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div> -->
+                </div>
+            </div>
         </section>
         <section class="companyJob">
             <div class="title">
