--- a/pro/company-story.html
+++ b/pro/company-story.html
@@ -138,43 +138,27 @@
                     </div>
                 </div>
             </div>
-            <swiper><!-- 10 Banner -->
-
-<div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide">
-            <img src="assets/img/swiper-img.png" alt="">
-            <div class="swiper-title">
-                <h2>二○二三 <br> 幸福企業票選</h2>
-                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
+            <div class="company-swiper">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/company-swiper01.png" alt="">
+                        </div>
+                    </div>
+                    <!-- <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div> -->
+                </div>
             </div>
-        </div>
-        <div class="swiper-slide">
-            <img src="assets/img/swiper-img.png" alt="">
-            <div class="swiper-title">
-                <h2>二○二三 <br> 幸福企業票選</h2>
-                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <img src="assets/img/swiper-img.png" alt="">
-            <div class="swiper-title">
-                <h2>二○二三 <br> 幸福企業票選</h2>
-                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <img src="assets/img/swiper-img.png" alt="">
-            <div class="swiper-title">
-                <h2>二○二三 <br> 幸福企業票選</h2>
-                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
-            </div>
-        </div>
-    </div>
-    <!-- <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div> -->
-</div></swiper>
         </section>
         <section class="companyJob">
             <div class="title">
