--- a/pro/talent.html
+++ b/pro/talent.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1111幸福企業</title>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <title>1111幸福企業｜人才永續</title>
 <script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/header.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 <body>
     <header><nav>
@@ -231,202 +230,208 @@
 
 <div class="companyTag-section">
     <div class="card-jobTag">
-        <img src="assets/img/job-card-cover.png" alt="">
-        <div class="content-section">
-            <div class="card-content">
-                <div class="job-title">
-                    <i class="fa-solid fa-heart"></i>
-                    <p>隆通工程有限公司</p>
+        <a href="company-story.html">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="content-section">
+                <div class="card-content">
+                    <div class="job-title">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>隆通工程有限公司</p>
+                    </div>
+                    <div class="job-content">
+                        <ul>
+                            <li>
+                                <img src="assets/img/job-card-icon01.png" alt="">
+                                <p>台北市南港區</p>
+                            </li>
+                            <li>
+                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="job-tag"> 
+                        <p class="tag">友善環境</p>
+                        <p class="tag">幸福企業</p>
+                        <p class="tag">幸福企業讚讚</p>
+                    </div>
                 </div>
-                <div class="job-content">
-                    <ul>
-                        <li>
-                            <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
-                        </li>
-                        <li>
-                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
-                <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                <div class="card-btn">
+                    <button class="btn">
+                        共有10筆職缺
+                    </button>
                 </div>
             </div>
-            <div class="card-btn">
-                <button class="btn">
-                    共有10筆職缺
-                </button>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="card-jobTag">
-        <img src="assets/img/job-card-cover.png" alt="">
-        <div class="content-section">
-            <div class="card-content">
-                <div class="job-title">
-                    <i class="fa-solid fa-heart"></i>
-                    <p>隆通工程有限公司</p>
+        <a href="company-story.html">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="content-section">
+                <div class="card-content">
+                    <div class="job-title">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>隆通工程有限公司</p>
+                    </div>
+                    <div class="job-content">
+                        <ul>
+                            <li>
+                                <img src="assets/img/job-card-icon01.png" alt="">
+                                <p>台北市南港區</p>
+                            </li>
+                            <li>
+                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="job-tag"> 
+                        <p class="tag">友善環境</p>
+                        <p class="tag">幸福企業</p>
+                        <p class="tag">幸福企業讚讚</p>
+                    </div>
                 </div>
-                <div class="job-content">
-                    <ul>
-                        <li>
-                            <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
-                        </li>
-                        <li>
-                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
-                <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                <div class="card-btn">
+                    <button class="btn">
+                        共有10筆職缺
+                    </button>
                 </div>
             </div>
-            <div class="card-btn">
-                <button class="btn">
-                    共有10筆職缺
-                </button>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="card-jobTag">
-        <img src="assets/img/job-card-cover.png" alt="">
-        <div class="content-section">
-            <div class="card-content">
-                <div class="job-title">
-                    <i class="fa-solid fa-heart"></i>
-                    <p>隆通工程有限公司</p>
+        <a href="company-story.html">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="content-section">
+                <div class="card-content">
+                    <div class="job-title">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>隆通工程有限公司</p>
+                    </div>
+                    <div class="job-content">
+                        <ul>
+                            <li>
+                                <img src="assets/img/job-card-icon01.png" alt="">
+                                <p>台北市南港區</p>
+                            </li>
+                            <li>
+                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="job-tag"> 
+                        <p class="tag">友善環境</p>
+                        <p class="tag">幸福企業</p>
+                        <p class="tag">幸福企業讚讚</p>
+                    </div>
                 </div>
-                <div class="job-content">
-                    <ul>
-                        <li>
-                            <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
-                        </li>
-                        <li>
-                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
-                <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                <div class="card-btn">
+                    <button class="btn">
+                        共有10筆職缺
+                    </button>
                 </div>
             </div>
-            <div class="card-btn">
-                <button class="btn">
-                    共有10筆職缺
-                </button>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="card-jobTag">
-        <img src="assets/img/job-card-cover.png" alt="">
-        <div class="content-section">
-            <div class="card-content">
-                <div class="job-title">
-                    <i class="fa-solid fa-heart"></i>
-                    <p>隆通工程有限公司</p>
+        <a href="company-story.html">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="content-section">
+                <div class="card-content">
+                    <div class="job-title">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>隆通工程有限公司</p>
+                    </div>
+                    <div class="job-content">
+                        <ul>
+                            <li>
+                                <img src="assets/img/job-card-icon01.png" alt="">
+                                <p>台北市南港區</p>
+                            </li>
+                            <li>
+                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="job-tag"> 
+                        <p class="tag">友善環境</p>
+                        <p class="tag">幸福企業</p>
+                        <p class="tag">幸福企業讚讚</p>
+                    </div>
                 </div>
-                <div class="job-content">
-                    <ul>
-                        <li>
-                            <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
-                        </li>
-                        <li>
-                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
-                <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                <div class="card-btn">
+                    <button class="btn">
+                        共有10筆職缺
+                    </button>
                 </div>
             </div>
-            <div class="card-btn">
-                <button class="btn">
-                    共有10筆職缺
-                </button>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="card-jobTag">
-        <img src="assets/img/job-card-cover.png" alt="">
-        <div class="content-section">
-            <div class="card-content">
-                <div class="job-title">
-                    <i class="fa-solid fa-heart"></i>
-                    <p>隆通工程有限公司</p>
+        <a href="company-story.html">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="content-section">
+                <div class="card-content">
+                    <div class="job-title">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>隆通工程有限公司</p>
+                    </div>
+                    <div class="job-content">
+                        <ul>
+                            <li>
+                                <img src="assets/img/job-card-icon01.png" alt="">
+                                <p>台北市南港區</p>
+                            </li>
+                            <li>
+                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="job-tag"> 
+                        <p class="tag">友善環境</p>
+                        <p class="tag">幸福企業</p>
+                        <p class="tag">幸福企業讚讚</p>
+                    </div>
                 </div>
-                <div class="job-content">
-                    <ul>
-                        <li>
-                            <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
-                        </li>
-                        <li>
-                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
-                <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                <div class="card-btn">
+                    <button class="btn">
+                        共有10筆職缺
+                    </button>
                 </div>
             </div>
-            <div class="card-btn">
-                <button class="btn">
-                    共有10筆職缺
-                </button>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="card-jobTag">
-        <img src="assets/img/job-card-cover.png" alt="">
-        <div class="content-section">
-            <div class="card-content">
-                <div class="job-title">
-                    <i class="fa-solid fa-heart"></i>
-                    <p>隆通工程有限公司</p>
+        <a href="company-story.html">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="content-section">
+                <div class="card-content">
+                    <div class="job-title">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>隆通工程有限公司</p>
+                    </div>
+                    <div class="job-content">
+                        <ul>
+                            <li>
+                                <img src="assets/img/job-card-icon01.png" alt="">
+                                <p>台北市南港區</p>
+                            </li>
+                            <li>
+                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="job-tag"> 
+                        <p class="tag">友善環境</p>
+                        <p class="tag">幸福企業</p>
+                        <p class="tag">幸福企業讚讚</p>
+                    </div>
                 </div>
-                <div class="job-content">
-                    <ul>
-                        <li>
-                            <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
-                        </li>
-                        <li>
-                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
-                <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                <div class="card-btn">
+                    <button class="btn">
+                        共有10筆職缺
+                    </button>
                 </div>
             </div>
-            <div class="card-btn">
-                <button class="btn">
-                    共有10筆職缺
-                </button>
-            </div>
-        </div>
+        </a>
     </div>
 </div>
 
