--- a/pro/archive-coverage.html
+++ b/pro/archive-coverage.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章列表 - 企業報導</title>
-<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/header.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/swiper.js"></script><script defer src="assets/js/header.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 
 <body>
     <header><nav>
@@ -253,9 +254,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div> -->
-    <!-- <div class="swiper-pagination"></div> -->
+    <div class="swiper-pagination"></div>
 </div></swiper>
     <div class="archive-tem archive-coverage-wrapper">
         <div class="archive-tem-c archive-coverage-container">
