--- a/pro/company-walfare.html
+++ b/pro/company-walfare.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1111幸福企業</title>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <title>1111幸福企業｜員工福利</title>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/swiper.js"></script><script defer src="assets/js/header.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 <body>
     <header><nav>
@@ -259,9 +259,7 @@
                             <img src="assets/img/company-swiper01.png" alt="">
                         </div>
                     </div>
-                    <!-- <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div> -->
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
@@ -289,7 +287,7 @@
                 </div>
                 <div class="walfare-group">
                     <p class="group-title">福利制度</p>
-                    <div class="item-group">
+                    <div class="item-group highlight">
                         <ul class="walfare-item">
                             <li class="p2">【獎金類】</li>
                             <li class="p2">年節獎金</li>
