--- a/pro/happiness-job.html
+++ b/pro/happiness-job.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1111幸福企業</title>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/header.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
+    <title>1111幸福企業｜推薦職缺</title>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/swiper.js"></script><script defer src="assets/js/header.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
@@ -253,9 +253,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div> -->
-    <!-- <div class="swiper-pagination"></div> -->
+    <div class="swiper-pagination"></div>
 </div></swiper>
         <section class="happinessJob">
             <div class="title">
