--- a/src/company-job.html
+++ b/src/company-job.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1111幸福企業</title>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </head>
 <body>
     <header></header>
@@ -49,9 +49,7 @@
                             <img src="assets/img/company-swiper01.png" alt="">
                         </div>
                     </div>
-                    <!-- <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div> -->
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
